--- a/resource/app-template/Contents/Info.plist
+++ b/resource/app-template/Contents/Info.plist
@@ -11,7 +11,7 @@
 		<string>borochi.icns</string>
 
 	<key>CFBundleIdentifier</key>
-		<string>io.cherrybomb.borochi</string>
+		<string>technology.cherrybomb.borochi</string>
 
 	<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
@@ -23,16 +23,13 @@
 		<string>APPL</string>
 
 	<key>CFBundleShortVersionString</key>
-		<string>0.2.0</string>
+		<string>1.0.0</string>
 
 	<key>CFBundleSignature</key>
 		<string>????</string>
 
 	<key>CFBundleVersion</key>
-		<string>0.2.0</string>
-
-	<key>NSHighResolutionCapable</key>
-		<true/>
+		<string>1.0.0</string>
 
 	<key>CFBundleDevelopmentRegion</key>
 		<string>English</string>
@@ -44,6 +41,17 @@
 
 	<key>CFBundleDisplayName</key>
     <string>borochi</string>
+
+	<!-- High DPI Displays (retina) -->
+	<key>NSHighResolutionCapable</key>
+		<true/>
+
+	<!-- Allow loading non-https content -->
+	<key>NSAppTransportSecurity</key>
+		<dict>
+			<key>NSAllowsArbitraryLoadsInWebContent</key>
+			<true/>
+		</dic>
 
 </dict>
 
