--- a/resource/app-template/Contents/Info.plist
+++ b/resource/app-template/Contents/Info.plist
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?><plist version="1.0">
-
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<plist version="1.0">
 <dict>
 	<key>CFBundleExecutable</key>
 		<string>borochi</string>
@@ -40,7 +40,7 @@
 		</array>
 
 	<key>CFBundleDisplayName</key>
-    <string>borochi</string>
+    	<string>borochi</string>
 
 	<!-- High DPI Displays (retina) -->
 	<key>NSHighResolutionCapable</key>
@@ -51,8 +51,6 @@
 		<dict>
 			<key>NSAllowsArbitraryLoadsInWebContent</key>
 			<true/>
-		</dic>
-
+		</dict>
 </dict>
-
 </plist>
